ags (0.7.87)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsSoundcardEditor not allowed free of string
	* fixed ags_soundcard_editor_add_soundcard() ignore AgsJackDevout
	* fixed ags_soundcard_editor_remove_soundcard() ignore AgsJackDevout

ags (0.7.86)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsNotifySoundcard to fast lock AgsSoundcard
	* implemented cyclic tasks in ags_task_thread_run()
	* implemented ags_task_thread_append_cyclic_task()
	* implemented ags_task_thread_remove_cyclic_task()
	* refactored ags_thread-posix.c to set AgsThread->tic_delay to be reset synced

ags (0.7.85)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsThread detach thread if not running while finalize
	* fixed AgsReturnableThread is not detached by default
	* fixed detach thread as calling AgsThread::stop()

ags (0.7.84)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong type of ags_recycling_context_new()'s function argument
	* fixed integer overflow in ags_channel.c while allocating AgsRecyclingContext

ags (0.7.83)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential infinite-loop
	* fixed race-condition as resizing audio channels and pads within gui thread

ags (0.7.82)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_playable_read_audio_signal() without resampling frame count

ags (0.7.81)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed not negated if condition in ags_ladspa_manager_get_filenames()
	* fixed non-synth lv2 plugins accessing NULL pointer ags-count-beats recall
	* fixed potential NULL pointer access in ags_recall_lv2_run_finalize()
	* fixed AgsRecallLv2Run to have :run-inter() for non-synths
	* fixed AgsRecallLadpsaRun, AgsRecallDssiRun and AgsRecallLv2Run to use correct copy mode
	* implemented ags_audio_buffer_util_clear_buffer()

ags (0.7.80)
